--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
         </activity>
         <activity android:name=".activity.JobOfferActivity">
         </activity>
+        <activity android:name=".activity.SeeOfferActivity">
+        </activity>
 
     </application>
 
