--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'org.nibor.autolink:autolink:0.10.0'
 }
